fixed bug: bg not showing

--- a/lab2/IMDTicket/style.css
+++ b/lab2/IMDTicket/style.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
 }
 section{
-    background-image: url("festival.jpg");
+    background-image: url("images/festival.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width:400px;
